# Engine-1

./: CMakeLists.txt  make_clang_win64.bat  make_vs2015_win64.bat
src/client/: key_input.h
src/core/: debug.h  map.h  portability.h  vector.h
src/core/private/: concurrency.cpp  file.cpp  library.cpp
src/gpu/: resources.h
src/gpu/private/: enum.cpp  utils.cpp
src/gpu_d3d12/private/: d3d12_backend.cpp  d3d12_command_list.cpp  d3d12_linear_heap_allocator.cpp  d3d12_types.cpp
src/graphics/converters/: converter_texture.cpp  dds.cpp
src/graphics/private/: factory.cpp
src/imgui/private/: manager.cpp
src/job/: CMakeLists.txt  manager.h  task_graph.h  types.h
src/job/private/: internal_types.h  manager.cpp  task_graph.cpp
src/job/tests/: task_graph_tests.cpp
src/math/: quat.h
src/math/private/: mat33.cpp  quat.cpp
src/math/tests/: mat44_tests.cpp
src/plugin/private/: manager.cpp
src/plugin/tests/: plugin_test_advanced.h
src/resource/private/: manager.cpp
src/serialization/: serializer.h
src/serialization/private/: serializer.cpp
